--- a/trunk/MP-TVSeries/GUIConfiguration.resx
+++ b/trunk/MP-TVSeries/GUIConfiguration.resx
@@ -313,6 +313,73 @@ Various group names are mandatory:
 &lt;seeds&gt; is the number of seeds for this torrents; this is used to sort the results from highest number to lowest
 &lt;leechers&gt; is the number of leechers; not displayed / used yet</value>
   </data>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 53</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABA
+        DQAAAk1TRnQBSQFMAgEBBQEAAQwBAAEEAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0YAAfQBBwHtAewB7QEH
+        AfQ3AAH/AQcB7wHtAfQB7QH0AewB7wEHAf80AAH/AewB7wH0Ae8BAAHtAQAB7wH0Ae8B7AH/MwAB7wHz
+        AfIB6gHvAfIB7AHyAe8B6gHyAfMB7zIAAf8B9wEAAf8B7QH/AfEBbQHxAf8B7QH/AQAB9wH/MQAB8AHz
+        AQAB8wG8AgAB7QIAAbwB8wEAAfMB8DEAAe8B8gHzAQcBvALzAewC8wG8AQcB8wHyAe8xAAHvAQcB8AGS
+        Ae8C8AFtAvAB7wGSAfABBwHvMQABvAHzAQAB8wHwAgAB7QIAAfAB8wEAAfMBvDEAAfQB7wEAAf8BkgEA
+        AfQB7AH0AQABkgH/AQAB7wH0MgABkgL0AeoB9wEHAW0BBwH3AeoC9AHsMwAB/wHrAfcB8QG8AQAB7QEA
+        AbwB8QH3AesB/zQAAfQB7AHxAfcB/wHtAf8B9wHxAewB9DcAAfEC7AESAuwB8XUAARICFQVDBhEnAAHz
+        AfAB8gHxAfAB8wUAAW0D7APrBm0BEQ4AARsCdBQAAvQBtQKuApEB7wHwAfIB9AIAAW0B7AFtAUcB6gES
+        AuwBEgHqAm0B7AERDQABGwF0AZkBdBMAAfIEtQO0AZEB9wHvAfIB9AEAAW0E3APbBdUBEQgAAf8B8gIJ
+        AbsB9wGZAXQBGwMAAvQGAAL0BgAB8AG7AQkCuwIJA7sB7wHxAfMBAAFtBdwC2wXVAREBAAEaAZkFUgHv
+        BBkBCQH3ARsCAAHzARMCDwETAfMCAAHzARMCDwETAfMDAAHyAQkBGQHdAQkBvAHwAhkCCQG8AvMBAAFt
+        BdwC2wXVAREBAAF0ARsBGgSaAQkFGQG7AgAB/wEUAQ8B6wHyAQ8BFAL/ARQBDwETAf8BDwEUAf8BAAH0
+        AxkBCQHyAfQB8wHyAhkB3QHvAfAB9AEAAesDCQHcBNsE1QERAQABUgH2AaACmgJ6AQkFGQEJAgAB8gEP
+        ARUB9AH/AfIBEgMPAeoB8gHvAQcB6wHyAgAB8wEZAQkBvAH0AgAB9AQZAe8B9AEAAewDCQLcBtsB1QEU
+        AQABUgH2AcMBoAKaAXoBCQUZAQkCAAIPARAB7wH/ARMBEAMPAUMB8wH/ARMBQwEPAQAB9AEZAQkBuwHx
+        AfQCAAH0ARkBCQEZAfABvAH0AQAB7AIJBNwE2wLVARQBAAFSAfYCwwKgAZoBmQEJAfMCGQEJAe8CAAEP
+        AREBDwERAe8BDwERAv8BEQEPARAB7QEPAREBDwEAAvEBuwG1AfEB9AIAAfMB3QEZAfMBvAMAAewBCQbc
+        AtsD1QEUAQABUgL/A/YBwwGaAZkBBwMJAXQDAAHxARACDwEQAfECAAHxARACDwEQAfECAAH0AfEB8AG1
+        AbwB9AEAAfQB8gHwAfQB8wG8AfICAAHrCdwB2wLVARMBAAFSAfYCmgF6ARsG9gH/AVgEAAH/AvAB/wQA
+        Af8C8AH/BAAC8QG8Ae8B8AHzAvAB9AH/AfQB8QHyAgAB8AHsA+sE7AHrA20BvAEAAVgB9gOaAnoCmgN6
+        AfYBWBMAAfMBvAHwAfEB8AK8AfAC8wLyAfQGAAH/ArUC/wKRAf8EAAFYAfYDmgEaBvYB/wF5EwAB/wHy
+        BPABvAHxAfMB8QEHAfEGAAH/ArUB/wIAAf8CkQH/AwABWAX/AfYEeQKZARsVAAHzAgcGvAHyBQAB/wK1
+        Af8EAAH/ApEB/wIAB3kH/xUAAfQBvAHwAbwCBwHxAfQB8wUAAf8CtQH/BgAB/wHtAZEB/ycAA/MB9AYA
+        AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAL/BgAB+AEPBgAB4AEDBgABwQFB
+        BgABwAEBBgABkAEEBgABkwFkBgABgAcAAYAHAAGTAWQGAAGSASQGAAHAAQEGAAHBAUEGAAHgAQMGAAH4
+        AQ8GAAL/BgABgAEBBP8B/AEPAYABAQH/AfgC/wHwAQEBgAEBAf8B8AL/AeABAAGAAQEB/gEAAucB4AEA
+        AYABAQEAAQECgQHAAQABgAEBAQABAwIAAYABAAGAAQEBAAEDAgABwQKAAQEBAAEDAgABgQKAAQEBAAED
+        AgABgQGDAYABAQEAAQMDgQEBAYABAQEAAQMCwwHAAQEBgAEBAQABAwL/AYABAwHwAQ8BAAEDAv8BgAEH
+        AeEBhwEAAQMC/wHgAQcCwwEAAQMC/wHgAQ8BhwHhBP8B/AE/Cw==
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>44</value>
   </metadata>
