--- a/trunk/MP-TVSeries/Online Parsing Classes/APIKey.resx
+++ b/trunk/MP-TVSeries/Online Parsing Classes/APIKey.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="APIKey" xml:space="preserve">
+  <data name="Key" xml:space="preserve">
     <value></value>
     <comment>Do NOT submitt this file with a working APIKey, developers need to get their own</comment>
   </data>
