--- a/trunk/MP-TVSeries/Configuration/logoConfigurator.resx
+++ b/trunk/MP-TVSeries/Configuration/logoConfigurator.resx
@@ -126,6 +126,9 @@
   <metadata name="toolTipLogos2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>430, 17</value>
   </metadata>
+  <metadata name="toolTipLogos2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>430, 17</value>
+  </metadata>
   <data name="cond1_type.ToolTip" xml:space="preserve">
     <value>Click to change one of the comparison operators used to evaluate this statement.
 You can use the 'contains' operator to check if a sub-string exists in the L.H.S of the expression.
@@ -166,5 +169,8 @@ the plugin will display ABC.png</value>
   </data>
   <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>157, 17</value>
+  </metadata>
+  <metadata name="toolTipLogos.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>315, 17</value>
   </metadata>
 </root>
