--- a/trunk/MP-TVSeries/Configuration/GUIConfiguration.resx
+++ b/trunk/MP-TVSeries/Configuration/GUIConfiguration.resx
@@ -219,15 +219,21 @@ In all other cases you will be presented with a choice from available matches an
         05d8OjNKAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="label66.Text" xml:space="preserve">
+    <value>These settings should correspond to the Image Dimmensions defined in your skin. To Improve performance scale accordingly
+e.g. If the orignal Season Banner is 400x576 and the skin sets it at 200x288, then 50% is going to give you the best quality. 
+
+Setting any higher will only give you a drop in performance</value>
+  </data>
+  <data name="checkBox_altImage.ToolTip" xml:space="preserve">
+    <value>Enables the image loading routine as was used in older Versions.
+Try this if only if you find that images (such as banners) do not load or dissapear inside Mediaportal. May be slower under certain conditions and has no effect in the Configuration.</value>
+  </data>
   <data name="addLogo.ToolTip" xml:space="preserve">
     <value>Click to add a logo rule, rules can be defined to indicate what Network the episode was orginally aired in or
 what video and audio codecs the epsiode is encoded in etc...
 
 A Logo package must be installed to display logos succesfully in Media Portal</value>
-  </data>
-  <data name="checkBox_altImage.ToolTip" xml:space="preserve">
-    <value>Enables the image loading routine as was used in older Versions.
-Try this if only if you find that images (such as banners) do not load or dissapear inside Mediaportal. May be slower under certain conditions and has no effect in the Configuration.</value>
   </data>
   <data name="textBox_foromID.ToolTip" xml:space="preserve">
     <value>Your forom ID. When you register on this site, go to "rubriques" then to "votre compte", and copy/paste 
@@ -251,6 +257,12 @@ Various group names are mandatory:
   <metadata name="toolTip_InfoHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1007, 14</value>
   </metadata>
+  <data name="checkBox_Episode_OnlyShowLocalFiles.ToolTip" xml:space="preserve">
+    <value>Enable this option to only display episodes in Media Portal that are found locally in import folders.
+Disable to show all seasons and episodes for series.
+
+This setting can also be changed from within Media Portal</value>
+  </data>
   <data name="comboBox_seasonFormat.ToolTip" xml:space="preserve">
     <value>Select the format to display the season listing in. Graphical will display the banners downloaded from online.
 Choose text if you dont want to display the downloaded banners but still have control over what is displayed</value>
@@ -293,12 +305,6 @@ You can right click on this textbox to bring up a menu of available fields from 
 
 Default: &lt;Episode.EpisodeIndex&gt;: &lt;Episode.LocalEpisodeName&gt; e.g. 1: The Return</value>
   </data>
-  <data name="checkBox_Episode_OnlyShowLocalFiles.ToolTip" xml:space="preserve">
-    <value>Enable this option to only display episodes in Media Portal that are found locally in import folders.
-Disable to show all seasons and episodes for series.
-
-This setting can also be changed from within Media Portal</value>
-  </data>
   <data name="richTextBox_episodeFormat_Main.ToolTip" xml:space="preserve">
     <value>Enter in the field(s) to be displayed in the main information pane of the episode view.
 You can right click on this textbox to bring up a menu of available fields from the database.
@@ -319,10 +325,6 @@ You can right click on this textbox to bring up a menu of available fields from 
 
 Default: &lt;Episode.SeasonIndex&gt;x&lt;Episode.EpisodeIndex&gt;: &lt;Episode.LocalEpisodeName&gt; e.g. 1x01: The Return</value>
   </data>
-  <data name="comboBox_seriesFormat.ToolTip" xml:space="preserve">
-    <value>Select the format to display the series listing in. Graphical will display the banners downloaded from online.
-Choose text if you dont want to display the downloaded banners but still have control over what is displayed</value>
-  </data>
   <data name="richTextBox_seriesFormat_Col3.ToolTip" xml:space="preserve">
     <value>Enter in the field(s) to be displayed in column three of the series view.
 You can right click on this textbox to bring up a menu of available fields from the database.
@@ -336,6 +338,10 @@ You can right click on this textbox to bring up a menu of available fields from 
 Defaults to: &lt;Series.Summary&gt; e.g. The 4400 tells the stories of 4,400 abductees....
 
 Use can enter '\n' to create newlines between fields</value>
+  </data>
+  <data name="comboBox_seriesFormat.ToolTip" xml:space="preserve">
+    <value>Select the format to display the series listing in. Graphical will display the banners downloaded from online.
+Choose text if you dont want to display the downloaded banners but still have control over what is displayed</value>
   </data>
   <data name="richTextBox_seriesFormat_Subtitle.ToolTip" xml:space="preserve">
     <value>Enter in the field(s) to be displayed in the sub-title information pane of the series view.
